--- a/appimage.html
+++ b/appimage.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 
-<ol>
-<li>
-AppImage
-
-</ol>
+<div id="AppImage"><h1 id="AppImage" class="header"><a href="#AppImage">AppImage</a></h1></div>
 
 <p>
 Skapa en fil i: 
