--- a/blapp.html
+++ b/blapp.html
@@ -8,16 +8,9 @@
 </head>
 <body>
 
-<ol>
-<li>
-BLAPP 
+<div id="BLAPP"><h1 id="BLAPP" class="header"><a href="#BLAPP">BLAPP</a></h1></div>
 
-</ol>
-
-<p>
-## Onboardinghoreri 
-[Superhemlig gist-länk](<a href="https://gist.github.com/Gustavhol/74a0e134f2f8e1f6ecc584b0b1c7b647)">https://gist.github.com/Gustavhol/74a0e134f2f8e1f6ecc584b0b1c7b647)</a>
-</p>
+<div id="BLAPP-Onboardinghoreri"><h2 id="Onboardinghoreri" class="header"><a href="#BLAPP-Onboardinghoreri">Onboardinghoreri</a></h2></div>
 
 </body>
 </html>
