--- a/datasources.html
+++ b/datasources.html
@@ -8,15 +8,9 @@
 </head>
 <body>
 
-<ol>
-<li>
-Datakällor
+<div id="Datakällor"><h1 id="Datakällor" class="header"><a href="#Datakällor">Datakällor</a></h1></div>
 
-</ol>
-
-<p>
-## Samhälle
-</p>
+<div id="Datakällor-Samhälle"><h2 id="Samhälle" class="header"><a href="#Datakällor-Samhälle">Samhälle</a></h2></div>
 <ul>
 <li>
 <a href="https://www.dataportal.se">https://www.dataportal.se</a>
@@ -24,9 +18,7 @@ Datakällor
 
 </ul>
 
-<p>
-## Språk
-</p>
+<div id="Datakällor-Språk"><h2 id="Språk" class="header"><a href="#Datakällor-Språk">Språk</a></h2></div>
 <ul>
 <li>
 <a href="https://github.com/peterdalle/svensktext">https://github.com/peterdalle/svensktext</a>
