--- a/dotfiles.html
+++ b/dotfiles.html
@@ -8,27 +8,13 @@
 </head>
 <body>
 
-<ol>
-<li>
-Dotfiles
+<div id="Dotfiles"><h1 id="Dotfiles" class="header"><a href="#Dotfiles">Dotfiles</a></h1></div>
 
-</ol>
-
+<div id="Dotfiles-Hantering av dotfiles"><h2 id="Hantering av dotfiles" class="header"><a href="#Dotfiles-Hantering av dotfiles">Hantering av dotfiles</a></h2></div>
 <p>
-## Hantering av dotfiles
 En tutorial om hur man sätter upp och hanterar ett bare git repo, för att spara och synka sina dot-filer.
 <a href="https://www.atlassian.com/git/tutorials/dotfiles">https://www.atlassian.com/git/tutorials/dotfiles</a>
 </p>
-
-
-<p>
-#### --- tags ---
-</p>
-<ul>
-<li>
-#productivity , #dotfiles , #config , #configuration, #emacs , #zsh , #i3 , #vim
-
-</ul>
 
 </body>
 </html>
