--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
 </head>
 <body>
 
-<ol>
-<li>
-Alternativ till zettelkasten? #
-
-</ol>
+<div id="Alternativ till zettelkasten?"><h1 id="Alternativ till zettelkasten?" class="header"><a href="#Alternativ till zettelkasten?">Alternativ till zettelkasten?</a></h1></div>
 
 
-<p>
-## dev ##
-</p>
+<div id="Alternativ till zettelkasten?-dev"><h2 id="dev" class="header"><a href="#Alternativ till zettelkasten?-dev">dev</a></h2></div>
 <ul>
 <li>
 <a href="fejk.html">fejk</a> - Sköna fejkresurser och todos
@@ -34,9 +28,7 @@ Alternativ till zettelkasten? #
 </ul>
 
 
-<p>
-## unix ##
-</p>
+<div id="Alternativ till zettelkasten?-unix"><h2 id="unix" class="header"><a href="#Alternativ till zettelkasten?-unix">unix</a></h2></div>
 <ul>
 <li>
 <a href="dotfiles.html">dotfiles</a> - Skön dotfilshantering
