--- a/scratchpad.html
+++ b/scratchpad.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 
-<ol>
-<li>
-scratchpad
-
-</ol>
+<div id="scratchpad"><h1 id="scratchpad" class="header"><a href="#scratchpad">scratchpad</a></h1></div>
 
 <p>
 här finns det lite sköna temporära snabba och förhoppningsvis kortlivade anteckningar
