added new entries

--- a/blapp.html
+++ b/blapp.html
@@ -10,7 +10,9 @@
 
 <div id="BLAPP"><h1 id="BLAPP" class="header"><a href="#BLAPP">BLAPP</a></h1></div>
 
-<div id="BLAPP-Onboardinghoreri"><h2 id="Onboardinghoreri" class="header"><a href="#BLAPP-Onboardinghoreri">Onboardinghoreri</a></h2></div>
+<p>
+<a href="Onboardinghoreri.html">Onboardinghoreri</a>
+</p>
 
 </body>
 </html>
