added html template

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-<div id="Alternativ till zettelkasten?"><h1 id="Alternativ till zettelkasten?" class="header"><a href="#Alternativ till zettelkasten?">Alternativ till zettelkasten?</a></h1></div>
+<div id="olin.wiki"><h1 id="olin.wiki" class="header"><a href="#olin.wiki">olin.wiki</a></h1></div>
 
 
-<div id="Alternativ till zettelkasten?-dev"><h2 id="dev" class="header"><a href="#Alternativ till zettelkasten?-dev">dev</a></h2></div>
+<div id="olin.wiki-dev"><h2 id="dev" class="header"><a href="#olin.wiki-dev">dev</a></h2></div>
 <ul>
 <li>
 <a href="fejk.html">fejk</a> - Sköna fejkresurser och todos
@@ -28,7 +28,7 @@
 </ul>
 
 
-<div id="Alternativ till zettelkasten?-unix"><h2 id="unix" class="header"><a href="#Alternativ till zettelkasten?-unix">unix</a></h2></div>
+<div id="olin.wiki-unix"><h2 id="unix" class="header"><a href="#olin.wiki-unix">unix</a></h2></div>
 <ul>
 <li>
 <a href="dotfiles.html">dotfiles</a> - Skön dotfilshantering
