added html template again

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <li>
 <a href="datasources.html">datasources</a> - lista över sköna datakällor
 
+<li>
+<a href="links.html">länkar</a> - lista över sköna länkar
+
 </ul>
 
 
