--- a/appimage.html
+++ b/appimage.html
@@ -14,16 +14,15 @@
 Skapa en fil i: 
 </p>
 
-<p>
-``<code>$HOME/.local/share/applications/AppNameHere.desktop</code>``
-</p>
+<pre class = "brush = sh">
+$HOME/.local/share/applications/AppNameHere.desktop
+</pre>
 
 <p>
 med detta innehåll:
 </p>
 
-<p>
-```bash
+<pre class = "brush = sh">
 [Desktop Entry]
 Type=Application
 Name=AppName
@@ -32,8 +31,7 @@ Icon=/home/supa/.images/rpcs3.png
 Exec=/home/supa/AppImages/rpcs3.AppImage
 Terminal=false
 Categories=Games
-```
-</p>
+</pre>
 
 </body>
 </html>
