--- a/appimage.html
+++ b/appimage.html
@@ -14,7 +14,7 @@
 Skapa en fil i: 
 </p>
 
-<pre class = "brush = sh">
+<pre sh>
 $HOME/.local/share/applications/AppNameHere.desktop
 </pre>
 
@@ -22,7 +22,7 @@ $HOME/.local/share/applications/AppNameHere.desktop
 med detta innehåll:
 </p>
 
-<pre class = "brush = sh">
+<pre sh>
 [Desktop Entry]
 Type=Application
 Name=AppName
